force-app/main/default/objects/Account/fields/B2C_Business_to_Consumer__c.field-meta.xml
<CustomField>
    <fullName>B2C_Business_to_Consumer__c</fullName>
    <label>B2C (Business to Consumer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>