force-app/main/default/objects/Account/fields/Bank_Details_Branch__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Branch__c</fullName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>