force-app/main/default/objects/Account/fields/Bank_Details_Checking_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Checking_Account__c</fullName>
    <label>Checking Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>