force-app/main/default/objects/Account/fields/Bank_Details_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_CNPJ__c</fullName>
    <label>Bank Details CNPJ</label>
    <length>30</length>
    <type>Text</type>
</CustomField>