force-app/main/default/objects/Account/fields/Bank_Details_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Company_Name__c</fullName>
    <label>Bank Details Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>