force-app/main/default/objects/Account/fields/Bank_Details_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Number__c</fullName>
    <label>Bank Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>