force-app/main/default/objects/Account/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>Billing State / Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>