force-app/main/default/objects/Account/fields/BillingComplement__c.field-meta.xml
<CustomField>
    <fullName>BillingComplement__c</fullName>
    <label>Billing Complement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>