force-app/main/default/objects/Account/fields/BillingNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingNumber__c</fullName>
    <label>Billing Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>