force-app/main/default/objects/Account/fields/Boleto_Share__c.field-meta.xml
<CustomField>
    <fullName>Boleto_Share__c</fullName>
    <label>Boleto (% Mensal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>