force-app/main/default/objects/Account/fields/Can_Create_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Can_Create_Opportunities__c</fullName>
    <formula>IF(
  OR(
    $Permission.Can_Edit_All_Opportunity_Stages,
    $Permission.Can_Edit_New_Business_Management_Opportunity_Stages,
    $Permission.Can_Edit_Sales_Management_Opportunity_Stages
  ),
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Create Opportunities</label>
    <type>Checkbox</type>
</CustomField>