force-app/main/default/objects/Account/fields/Canal_Vendas__c.field-meta.xml
<CustomField>
    <fullName>Canal_Vendas__c</fullName>
    <description>Informar o principal canal de vendas da empresa.</description>
    <inlineHelpText>Informar o principal canal de vendas da empresa.</inlineHelpText>
    <label>Canal de Vendas Principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
                <label>B2B (Business to Business)</label>
            </value>
            <value>
                <fullName>B2C</fullName>
                <label>B2C (Business to Consumer)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>