force-app/main/default/objects/Account/fields/Cartao_Credito_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Cartao_Credito_Mensal__c</fullName>
    <description>Informar o % das receita mensal total que é gerada através de pagamentos com cartão de crédito.</description>
    <inlineHelpText>Informar o % das receita mensal total que é gerada através de pagamentos com cartão de crédito.</inlineHelpText>
    <label>Cartão de Crédito (% mensal)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>