force-app/main/default/objects/Account/fields/Categoria_de_Produto__c.field-meta.xml
<CustomField>
    <fullName>Categoria_de_Produto__c</fullName>
    <description>Informar o tipo de produto comercializado (bens físicos, software, produtos digitais, serviços)</description>
    <inlineHelpText>Informar o tipo de produto comercializado (bens físicos, software, produtos digitais, serviços)</inlineHelpText>
    <label>Categoria de Produto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>