force-app/main/default/objects/Account/fields/Chargeback__c.field-meta.xml
<CustomField>
    <fullName>Chargeback__c</fullName>
    <description>Chargeback: devolução dos valores solicitada pelo cliente final,diretamente à adquirente ou banco emissor do cartão.</description>
    <inlineHelpText>Chargeback: devolução dos valores solicitada pelo cliente final,diretamente à adquirente ou banco emissor do cartão.</inlineHelpText>
    <label>Taxa de Chargeback Atual</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>