force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <label>Fiscal Registration Number (CNPJ)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>