force-app/main/default/objects/Account/fields/Contacts_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contacts Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>