force-app/main/default/objects/Account/fields/CustomerFinalSupportChannelEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerFinalSupportChannelEmail__c</fullName>
    <label>E-mail of Support to End Customer</label>
    <type>Email</type>
</CustomField>