force-app/main/default/objects/Account/fields/CustomerFinalSupportChannelUrl__c.field-meta.xml
<CustomField>
    <fullName>CustomerFinalSupportChannelUrl__c</fullName>
    <label>URL of Support to End Customer</label>
    <type>Url</type>
</CustomField>