force-app/main/default/objects/Account/fields/Date_Account_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Creation__c</fullName>
    <description>Date for Account Creation</description>
    <inlineHelpText>Date for Account Creation</inlineHelpText>
    <label>Date Account Creation</label>
    <type>Date</type>
</CustomField>