force-app/main/default/objects/Account/fields/Descricao_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Descricao_Empresa__c</fullName>
    <description>Detalhar o ramo de atividade da empresa e a forma de comercialização dos produtos.</description>
    <inlineHelpText>Detalhar o ramo de atividade da empresa e a forma de comercialização dos produtos.</inlineHelpText>
    <label>Descrição Detalhada do Produto/Serviço</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>