force-app/main/default/objects/Account/fields/Filial_no_Brasil__c.field-meta.xml
<CustomField>
    <fullName>Filial_no_Brasil__c</fullName>
    <label>Filial no Brasil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>