force-app/main/default/objects/Account/fields/Fiscal_Number__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Number__c</fullName>
    <inlineHelpText>VAT | EIN | Other</inlineHelpText>
    <label>Fiscal Number (VAT)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>