force-app/main/default/objects/Account/fields/Last_KYC_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_KYC_Signature_Date__c</fullName>
    <label>Last KYC Signature Date</label>
    <type>Date</type>
</CustomField>