force-app/main/default/objects/Account/fields/Lead_Expected_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Expected_Record_Type__c</fullName>
    <label>Lead Expected Record Type</label>
    <type>TextArea</type>
</CustomField>