force-app/main/default/objects/Account/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name__c</fullName>
    <description>Informar a razão social da empresa, conforme consta no cartão CNPJ.</description>
    <inlineHelpText>Informar a razão social da empresa, conforme consta no cartão CNPJ.</inlineHelpText>
    <label>Legal Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>