force-app/main/default/objects/Account/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <description>Como é feito o Marketing Digital da empresa?</description>
    <inlineHelpText>Como é feito o Marketing Digital da empresa? Facebook Ads, Google Adwords, Afiliados, Publicidade.</inlineHelpText>
    <label>Marketing (como gera tráfego)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>