force-app/main/default/objects/Account/fields/Metodos_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Metodos_de_Pagamento__c</fullName>
    <description>Em geral, recomendamos o uso de todos os nossos métodos de pagamento para maximizar as conversões.</description>
    <inlineHelpText>Em geral, recomendamos o uso de todos os nossos métodos de pagamento para maximizar as conversões.</inlineHelpText>
    <label>Métodos de Pagamento Utilizados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto bancário</fullName>
            </value>
            <value>
                <fullName>Cartão de crédito</fullName>
            </value>
            <value>
                <fullName>Cartão de débito</fullName>
            </value>
            <value>
                <fullName>Transferência Bancária</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>