force-app/main/default/objects/Account/fields/Modelo_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Modelo_de_Negocio__c</fullName>
    <label>Modelo de Negócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intermediação (processamento técnico e coleta de valores)</fullName>
            </value>
            <value>
                <fullName>Gateway (somente processamento técnico - disponível apenas para cartão de crédito)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>