force-app/main/default/objects/Account/fields/Modelo_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Modelo_de_Pagamento__c</fullName>
    <inlineHelpText>Informa se utilizará cartão de crédito com a opção de pagamento recorrente (serviços de assinatura).</inlineHelpText>
    <label>Modelo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Único</fullName>
            </value>
            <value>
                <fullName>Assinatura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>