force-app/main/default/objects/Account/fields/Nome_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Nome_Comercial__c</fullName>
    <label>Nome Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>