force-app/main/default/objects/Account/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <description>Organization Id from Zendesk</description>
    <label>Organization Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>