force-app/main/default/objects/Account/fields/Parcelamento__c.field-meta.xml
<CustomField>
    <fullName>Parcelamento__c</fullName>
    <label>Cartão de Crédito Parcelado?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>