force-app/main/default/objects/Account/fields/Plataforma_Utilizada__c.field-meta.xml
<CustomField>
    <fullName>Plataforma_Utilizada__c</fullName>
    <label>Plataforma Utilizada</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InHouse</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Woocommerce</fullName>
            </value>
            <value>
                <fullName>Vtex</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>PrestaShop</fullName>
            </value>
            <value>
                <fullName>OpenCart</fullName>
            </value>
            <value>
                <fullName>Wix</fullName>
            </value>
            <value>
                <fullName>Loja Integrada</fullName>
            </value>
            <value>
                <fullName>NaoDefinidoAinda</fullName>
                <label>Não definida ainda</label>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>