force-app/main/default/objects/Account/fields/Plataforma_Utilizada_Outra__c.field-meta.xml
<CustomField>
    <fullName>Plataforma_Utilizada_Outra__c</fullName>
    <label>Outra</label>
    <type>TextArea</type>
</CustomField>