force-app/main/default/objects/Account/fields/Preco_maximo__c.field-meta.xml
<CustomField>
    <fullName>Preco_maximo__c</fullName>
    <label>Preço máximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>