force-app/main/default/objects/Account/fields/Preco_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Preco_Minimo__c</fullName>
    <label>Preço Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>