force-app/main/default/objects/Account/fields/Receita_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Receita_Mensal__c</fullName>
    <label>Receita Mensal</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>