force-app/main/default/objects/Account/fields/Reembolso__c.field-meta.xml
<CustomField>
    <fullName>Reembolso__c</fullName>
    <inlineHelpText>Reembolso: Devolução dos valores realizada pelo lojista, mediante solicitação do cliente final.</inlineHelpText>
    <label>Taxa de Reembolso Atual</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>