force-app/main/default/objects/Account/fields/Servico_de_Reconciliacao__c.field-meta.xml
<CustomField>
    <fullName>Servico_de_Reconciliacao__c</fullName>
    <inlineHelpText>Informar se contratará a opção de relatórios de conciliação, no modelo de Gateway.</inlineHelpText>
    <label>Serviço de Reconciliação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>