force-app/main/default/objects/Account/fields/ShippingComplement__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplement__c</fullName>
    <label>Shipping Complement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>