force-app/main/default/objects/Account/fields/Ticket_medio__c.field-meta.xml
<CustomField>
    <fullName>Ticket_medio__c</fullName>
    <description>Informar o preço médio de venda dos produtos.</description>
    <inlineHelpText>Informar o preço médio de venda dos produtos.</inlineHelpText>
    <label>Ticket médio de Vendas</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>