force-app/main/default/objects/Account/fields/TicketCreationDate__c.field-meta.xml
<CustomField>
    <fullName>TicketCreationDate__c</fullName>
    <description>Ticket Creation Date</description>
    <label>Ticket Creation Date</label>
    <type>DateTime</type>
</CustomField>