force-app/main/default/objects/Account/fields/TicketId__c.field-meta.xml
<CustomField>
    <fullName>TicketId__c</fullName>
    <description>Tiket Id from Zendesk</description>
    <externalId>true</externalId>
    <inlineHelpText>Tiket Id from Zendesk</inlineHelpText>
    <label>Ticket Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>