force-app/main/default/objects/Account/fields/VATCNPJ__c.field-meta.xml
<CustomField>
    <fullName>VATCNPJ__c</fullName>
    <formula>IF( Fiscal_Number__c != &apos;&apos;,  Fiscal_Number__c,  CNPJ__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT/CNPJ</label>
    <type>Text</type>
</CustomField>