force-app/main/default/objects/Account/validationRules/Account_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Country</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK(BillingCountry) )</errorConditionFormula>
    <errorMessage>Preencher Billing Country</errorMessage>
</ValidationRule>