force-app/main/default/objects/Account/validationRules/Bank_Details_CNPJ_Prohibit_Special_Chars.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Details_CNPJ_Prohibit_Special_Chars</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Bank_Details_CNPJ__c, &quot;^[a-zA-Z0-9_]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Bank_Details_CNPJ__c</errorDisplayField>
    <errorMessage>Special characters are not allowed</errorMessage>
</ValidationRule>