force-app/main/default/objects/Account/validationRules/Validation_Not_Edit_Sales.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Not_Edit_Sales</fullName>
    <active>true</active>
    <description>Sales NB and Sales XB can&apos;t edit Type field in Account</description>
    <errorConditionFormula>AND(
    OR(
        $Profile.Name = &quot;Sales NB&quot;,
        $Profile.Name = &quot;Sales XB&quot;
    ),
    ISCHANGED(Type),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Sales NB and Sales XB can&apos;t edit Type field in Account</errorMessage>
</ValidationRule>